# konfio_challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  enums.py  gecko_service.py  load_csv_postgres.py  write_csv_service.py
environment/: .gfenv
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/dashboards/json/: dashboard.json
grafana/provisioning/datasources/: postgres.yml
